--- a/platform/Cargo.toml
+++ b/platform/Cargo.toml
@@ -18,6 +18,7 @@ path = "src/main.rs"
 
 [dependencies]
 roc_std = { path = "../../roc/crates/roc_std" }
+tokio = { version = "1.19.2", features = ["full"] }
 libc = "0.2"
 
 [workspace]
