--- a/platform/Cargo.toml
+++ b/platform/Cargo.toml
@@ -19,6 +19,7 @@ path = "src/main.rs"
 [dependencies]
 roc_std = { path = "../../roc/crates/roc_std" }
 tokio = { version = "1.19.2", features = ["full"] }
+bumpalo = "3.10.0"
 libc = "0.2"
 
 [workspace]
