use random numbers to make things more fun

--- a/02-future-continuation/Cargo.toml
+++ b/02-future-continuation/Cargo.toml
@@ -21,5 +21,6 @@ roc_std = { path = "../../roc/crates/roc_std" }
 tokio = { version = "1.19.2", features = ["full"] }
 futures = "0.3.21"
 libc = "0.2"
+rand = { version = "0.8.5", features = ["std_rng", "getrandom"] }
 
 [workspace]
