--- a/05-async-web/hyper-raw/Cargo.toml
+++ b/05-async-web/hyper-raw/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 hyper = { version = "0.14", features = ["full"] }
 tokio = { version = "1", features = ["full"] }
+askama = "0.11.1"
